ENT-2792: Port ConsumerContentOverrideResource to spec-first
